--- a/kernel/.cvsignore
+++ b/kernel/.cvsignore
@@ -14,6 +14,7 @@
 *.gdl
 *.ilk
 *.pdb
+*.opt
 boomake*
 configure*
 Makefile*
@@ -239,4 +240,8 @@ amq_mesgref_test
 amq_match_table_test
 amq_match_test
 amq_test_matching
+amq_hitset.c
+amq_hitset.h
+amq_hitset_test.c
+
 
