--- a/clients/java2/src/log4j.properties
+++ b/clients/java2/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, console
+log4j.rootCategory=ERROR, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Threshold=DEBUG
