--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -21,7 +21,7 @@
         <queue
             name = "default"
             auto-purge = "0"
-            memory-queue-max = "1000"
+            memory-queue-max = "10000"
             min-consumers = "0"
             max-consumers = "0"
             browsable = "1"
@@ -34,7 +34,7 @@
             extent-size = "25000"
         />
         <queue
-            name = "temporary"
+            name = "dynamic"
             page-size = "4096"
             block-size = "2000"
         />
