Fixed activation of consumers

--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -37,6 +37,7 @@
             name = "dynamic"
             page-size = "4096"
             block-size = "2000"
+            memory-queue-max = "1000"
         />
         <subscription
             name = "default"
