*** empty log message ***

--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -52,4 +52,8 @@
             max-consumers = "10"
         />
     </queues>
+
+    <topics>
+        <topic name = "cbr" />
+    </topics>
 </config>
