--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -16,6 +16,11 @@
         context_timeout = "5"
         />
 
+    <verbosity
+        trace_queue = "1"
+        trace_route = "1"
+        />
+
     <resources
         max_memory = "800000000"
         />
@@ -28,7 +33,7 @@
     <vhosts>
         <!-- Virtual hosts, each configured in their own directory -->
         <vhost directory = "vh_default" />
-        <vhost directory = "vh_test"    />
+        <vhost directory = "vh_test" />
     </vhosts>
 
     <security
