jira:amq-35 - added delayed auto-delete on queues

--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -1,13 +1,11 @@
 <?xml?>
 <config>
-    <!--
-    server.cfg - OpenAMQ server primary configuration file
-    -->
-
+    <!-- OpenAMQ server primary configuration file -->
     <server
         port = "7654"
         background = "0"
         context_timeout = "5"
+        queue_timeout = "5"
         />
 
     <verbosity
