--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -9,12 +9,13 @@
         />
 
     <verbosity
-        trace_route = "1"
-        trace_queue = "1"
+        trace_route = "0"
+        trace_queue = "0"
         />
 
     <resources
         max_memory = "800000000"
+        monitor = "1"
         />
 
     <logging
