--- a/clients_java/client/src/log4j.properties
+++ b/clients_java/client/src/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootCategory=${amqj.logging.level}, console
 
+log4j.rootLogger=WARN
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.Threshold=WARN
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%t %d %p [%c{4}] %m%n
