--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -6,7 +6,7 @@
         instead, copy this file to "custom.cfg" and then edit that
         file to contain only the sections you want to customise.
      -->
-        
+
     <server
         port = "7654"
         background = "0"
@@ -17,6 +17,7 @@
     <verbosity
         trace_route = "0"
         trace_queue = "0"
+        trace_cluster = "0"
         />
 
     <resources
