--- a/dotnet/xmscommon/xmscommon.csproj
+++ b/dotnet/xmscommon/xmscommon.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{77064C42-24D2-4CEB-9EA2-0EF481A43205}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>xmscommon</RootNamespace>
+    <RootNamespace>OpenAMQ</RootNamespace>
     <AssemblyName>xmscommon</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,17 +28,119 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\log4net\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AMQChannelClosedException.cs" />
+    <Compile Include="AMQConnectionClosedException.cs" />
+    <Compile Include="AMQDisconnectedException.cs" />
     <Compile Include="AMQException.cs" />
+    <Compile Include="AMQUndeliveredException.cs" />
+    <Compile Include="Framing\AMQFrame.cs" />
+    <Compile Include="Framing\AMQMethodBody.cs" />
+    <Compile Include="Framing\AMQMethodBodyFactory.cs" />
+    <Compile Include="Framing\BasicContentHeaderProperties.cs" />
+    <Compile Include="Framing\CompositeAMQDataBlock.cs" />
+    <Compile Include="Framing\ContentBody.cs" />
+    <Compile Include="Framing\ContentBodyFactory.cs" />
+    <Compile Include="Framing\ContentHeaderBody.cs" />
+    <Compile Include="Framing\ContentHeaderBodyFactory.cs" />
+    <Compile Include="Framing\ContentHeaderPropertiesFactory.cs" />
+    <Compile Include="Framing\EncodingUtils.cs" />
+    <Compile Include="Framing\FieldTable.cs" />
+    <Compile Include="Framing\IBody.cs" />
+    <Compile Include="Framing\IDataBlock.cs" />
+    <Compile Include="Framing\AMQFrameDecodingException.cs" />
+    <Compile Include="Framing\IEncodableAMQDataBlock.cs" />
+    <Compile Include="Framing\IBodyFactory.cs" />
+    <Compile Include="Framing\IContentHeaderProperties.cs" />
+    <Compile Include="Framing\ProtocolInitiation.cs" />
+    <Compile Include="generated\AccessRequestBody.cs" />
+    <Compile Include="generated\AccessRequestOkBody.cs" />
+    <Compile Include="generated\BasicAckBody.cs" />
+    <Compile Include="generated\BasicCancelBody.cs" />
+    <Compile Include="generated\BasicCancelOkBody.cs" />
+    <Compile Include="generated\BasicConsumeBody.cs" />
+    <Compile Include="generated\BasicConsumeOkBody.cs" />
+    <Compile Include="generated\BasicDeliverBody.cs" />
+    <Compile Include="generated\BasicGetBody.cs" />
+    <Compile Include="generated\BasicGetEmptyBody.cs" />
+    <Compile Include="generated\BasicGetOkBody.cs" />
+    <Compile Include="generated\BasicPublishBody.cs" />
+    <Compile Include="generated\BasicRejectBody.cs" />
+    <Compile Include="generated\BasicReturnBody.cs" />
+    <Compile Include="generated\ChannelAlertBody.cs" />
+    <Compile Include="generated\ChannelCloseBody.cs" />
+    <Compile Include="generated\ChannelCloseOkBody.cs" />
+    <Compile Include="generated\ChannelFlowBody.cs" />
+    <Compile Include="generated\ChannelOpenBody.cs" />
+    <Compile Include="generated\ChannelOpenOkBody.cs" />
+    <Compile Include="generated\ConnectionCloseBody.cs" />
+    <Compile Include="generated\ConnectionCloseOkBody.cs" />
+    <Compile Include="generated\ConnectionOpenBody.cs" />
+    <Compile Include="generated\ConnectionOpenOkBody.cs" />
+    <Compile Include="generated\ConnectionRedirectBody.cs" />
+    <Compile Include="generated\ConnectionSecureBody.cs" />
+    <Compile Include="generated\ConnectionSecureOkBody.cs" />
+    <Compile Include="generated\ConnectionStartBody.cs" />
+    <Compile Include="generated\ConnectionStartOkBody.cs" />
+    <Compile Include="generated\ConnectionTuneBody.cs" />
+    <Compile Include="generated\ConnectionTuneOkBody.cs" />
+    <Compile Include="generated\DtxSelectBody.cs" />
+    <Compile Include="generated\DtxSelectOkBody.cs" />
+    <Compile Include="generated\DtxStartBody.cs" />
+    <Compile Include="generated\DtxStartOkBody.cs" />
+    <Compile Include="generated\ExchangeDeclareBody.cs" />
+    <Compile Include="generated\ExchangeDeclareOkBody.cs" />
+    <Compile Include="generated\ExchangeDeleteBody.cs" />
+    <Compile Include="generated\ExchangeDeleteOkBody.cs" />
+    <Compile Include="generated\FileAckBody.cs" />
+    <Compile Include="generated\FileCancelBody.cs" />
+    <Compile Include="generated\FileCancelOkBody.cs" />
+    <Compile Include="generated\FileConsumeBody.cs" />
+    <Compile Include="generated\FileConsumeOkBody.cs" />
+    <Compile Include="generated\FileDeliverBody.cs" />
+    <Compile Include="generated\FileOpenBody.cs" />
+    <Compile Include="generated\FileOpenOkBody.cs" />
+    <Compile Include="generated\FilePublishBody.cs" />
+    <Compile Include="generated\FileRejectBody.cs" />
+    <Compile Include="generated\FileReturnBody.cs" />
+    <Compile Include="generated\FileStageBody.cs" />
+    <Compile Include="generated\MethodBodyDecoderRegistry.cs" />
+    <Compile Include="generated\QueueBindBody.cs" />
+    <Compile Include="generated\QueueBindOkBody.cs" />
+    <Compile Include="generated\QueueDeclareBody.cs" />
+    <Compile Include="generated\QueueDeclareOkBody.cs" />
+    <Compile Include="generated\QueueDeleteBody.cs" />
+    <Compile Include="generated\QueueDeleteOkBody.cs" />
+    <Compile Include="generated\QueuePurgeBody.cs" />
+    <Compile Include="generated\QueuePurgeOkBody.cs" />
+    <Compile Include="generated\StreamCancelBody.cs" />
+    <Compile Include="generated\StreamCancelOkBody.cs" />
+    <Compile Include="generated\StreamConsumeBody.cs" />
+    <Compile Include="generated\StreamConsumeOkBody.cs" />
+    <Compile Include="generated\StreamDeliverBody.cs" />
+    <Compile Include="generated\StreamPublishBody.cs" />
+    <Compile Include="generated\StreamReturnBody.cs" />
+    <Compile Include="generated\TxCommitBody.cs" />
+    <Compile Include="generated\TxCommitOkBody.cs" />
+    <Compile Include="generated\TxRollbackBody.cs" />
+    <Compile Include="generated\TxRollbackOkBody.cs" />
+    <Compile Include="generated\TxSelectBody.cs" />
+    <Compile Include="generated\TxSelectOkBody.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="framing\" />
-    <Folder Include="generated\" />
+    <ProjectReference Include="..\minadotnet\minadotnet.csproj">
+      <Project>{E6EED856-9650-439F-BB81-F35A2C0F8AB8}</Project>
+      <Name>minadotnet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
