--- a/dotnet/minatests/minatests.csproj
+++ b/dotnet/minatests/minatests.csproj
@@ -73,6 +73,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.2.5.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -91,6 +92,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="jpmorgan\mina\common\support\TestLinkedHashtable.cs" />
+    <Compile Include="jpmorgan\TestThreading.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\minadotnet\minadotnet.csproj">
