--- a/dotnet/xmsclient/xmsclient.csproj
+++ b/dotnet/xmsclient/xmsclient.csproj
@@ -32,7 +32,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\xmsapi\lib\IBM.XMS.dll</HintPath>
     </Reference>
-    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905" />
+    <Reference Include="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=b32731d11ce58905">
+      <HintPath>..\xmscommon\lib\log4net\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
