--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -8,7 +8,7 @@
      -->
 
     <server
-        port = "7654"
+        port = "5672"
         background = "0"
         context_timeout = "5"
         queue_timeout = "5"
@@ -31,12 +31,16 @@
         console = "console.log"
         />
 
+    <tuning
+        packio = "1"
+        />
+        
     <cluster
         enabled = "0"
-        key = "default"
+        vhost = "/"
         primary = ""
         />
-    
+
     <vhosts>
         <!-- Virtual hosts, each configured in their own directory -->
         <vhost directory = "vh_default" />
