--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -12,6 +12,7 @@
         background = "0"
         context_timeout = "5"
         queue_timeout = "5"
+        spid = ""
         />
 
     <verbosity
