--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -25,6 +25,7 @@
         max_memory = "800000000"
         queue_limit = "10000"
         monitor = "0"
+        dump_state = "0"
         />
 
     <logging
