--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -16,16 +16,19 @@
         />
 
     <verbosity
+        trace_login = "0"
         trace_route = "0"
         trace_queue = "0"
         trace_cluster = "0"
         />
 
     <resources
-        max_memory = "800000000"
+        max_memory_mb = "800"
         queue_limit = "10000"
         monitor = "0"
         dump_state = "0"
+        recycler = "60"
+        trace = "0"
         />
 
     <logging
@@ -36,11 +39,14 @@
     <tuning
         packio = "1"
         />
-        
+
     <cluster
         enabled = "0"
         vhost = "/"
         primary = ""
+        callback = ""
+        state_mb = "250"
+        heartbeat = "60"
         />
 
     <vhosts>
