--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -51,6 +51,11 @@
         heartbeat = "60"
         />
 
+    <internal
+        auto_crash = "0"
+        auto_block = "0"
+        />
+
     <vhosts>
         <!-- Virtual hosts, each configured in their own directory -->
         <vhost directory = "vh_default" />
