--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -12,7 +12,6 @@
         background = "0"
         context_timeout = "5"
         queue_timeout = "5"
-        spid = ""
         />
 
     <verbosity
@@ -43,24 +42,24 @@
         />
 
     <cluster
-        enabled = "0"
         vhost = "/"
-        primary = ""
         callback = ""
         state_mb = "250"
-        heartbeat = "60"
-        />
+        heartbeat = "5"
+        >
+        <!-- All cluster servers
+          - remove comment to configure cluster
+          - server id is also specified on command line
+        <server name = "cluster-001" host = "address:port" primary = "1" />
+        <server name = "cluster-002" host = "address:port" backup = "1" />
+        <server name = "cluster-003" host = "address:port" />
+        -->
+    </cluster>
 
     <internal
         auto_crash = "0"
         auto_block = "0"
         />
-
-    <vhosts>
-        <!-- Virtual hosts, each configured in their own directory -->
-        <vhost directory = "vh_default" />
-        <vhost directory = "vh_test" />
-    </vhosts>
 
     <!-- Default passwords -->
     <security name = "plain">
