--- a/kernel/server.cfg
+++ b/kernel/server.cfg
@@ -43,7 +43,7 @@
 
     <cluster
         vhost = "/"
-        callback = ""
+        host = ""
         state_mb = "250"
         heartbeat = "5"
         >
